--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,7 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
+- lucid-htmx-0.1.0.4@sha256:2c9b0f461bace35b041abda18fa02090480fedf07d66018a5af624516292af10,1521
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
