--- a/lucid-from-html.cabal
+++ b/lucid-from-html.cabal
@@ -43,7 +43,7 @@ library
     , directory
     , filepath
     , lucid
-    , lucid-htmx >=0.1.0.4
+    , lucid-htmx
     , tagsoup
     , text
   default-language: Haskell2010
@@ -62,7 +62,7 @@ executable lucid-from-html
     , filepath
     , lucid
     , lucid-from-html
-    , lucid-htmx >=0.1.0.4
+    , lucid-htmx
     , tagsoup
     , text
   default-language: Haskell2010
@@ -83,7 +83,7 @@ test-suite test
     , filepath
     , lucid
     , lucid-from-html
-    , lucid-htmx >=0.1.0.4
+    , lucid-htmx
     , tagsoup
     , tasty >=0.8
     , tasty-golden >=2.3.1.1
